2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/decompose.c: Use strncpy() instead of strcpy() to
	avoid buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/compose.c: Specify maximum field width in
	sscanf() to avoid buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/channel_mixer.c: Specify maximum field width in
	fscanf() to avoid buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig-style.c: Check and handle case where number of
	style items read can overflow the buffer.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig-style.c: Replaced use of g_new()+strcpy() with
	g_strdup().

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/winsnap/winsnap.c: Use strncpy() instead of strcpy() to
	avoid buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/xjt/xjt.c: Replaced use of g_malloc()+strcpy() with
	g_strdup().

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/gqbist.c: Use strncpy() instead of strcpy() to
	avoid buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/gtm.c: Use strncpy() instead of strcpy() to avoid
	buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/jpeg/jpeg.c: Removed redundant image_ID declaration that
	shadowed an outer variable needlessly (found using Splint).

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/sel2path/fit.c: Initialize spline.linearity before use.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/sel2path/spline.c: Initialize spline.linearity before use.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/script-fu/re/split.c
	* plug-ins/script-fu/re/split.h
	* plug-ins/script-fu/re/main.c
	* plug-ins/script-fu/re/Makefile.am: Created a header file (split.h)
	and added a prototype for split().
